# subconscious-ai-v0.0.2

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
src/: core_loop.rs  llm_client.rs  main.rs  subconscious.rs  task_manager.rs
