[package]
name = "subconscious_ai"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json"] }
redis = { version = "0.25.4", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11.3"
config = "0.14.0"
colored = "2.0.0"
warp = "0.3.0"
anyhow = "1.0"